# desktop

./: AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.base.json
apps/desktop/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/web/: App.tsx  index.css
crates/db/: Cargo.toml
crates/db/src/: bootstrap.rs  error.rs  lib.rs  location.rs  repository_tests.rs
crates/db/src/repository/: connection.rs  mod.rs  project.rs  session.rs  task.rs  worktree.rs
crates/domain/src/: artifact.rs  audit_fields.rs  lib.rs  project.rs  session.rs  task.rs  tests.rs  virtual_entry.rs  virtual_folder.rs  worktree.rs
design/: dashboard.pen
design/drafts/: dashboard.md
docs/: application-contracts.md  schema.sql
openspec/: config.yaml
openspec/changes/archive/2026-05-12-implement-db-ports-for-project-session-task-worktree/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-12-implement-db-ports-for-project-session-task-worktree/specs/database-repositories/: spec.md
openspec/specs/database-repositories/: spec.md
src/: index.css
src-tauri/: tauri.conf.json
