[package]
name = "ora-db"
version.workspace = true
edition.workspace = true

[lib]
name = "ora_db"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
ora-application = { workspace = true }
ora-domain = { workspace = true }
ora-logging = { workspace = true }
r2d2 = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
